--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "author": "JordiGarcL",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.667.0",
     "axios": "^0.19.2"
+  },
+  "devDependencies": {
+    "serverless-offline": "^6.1.4",
+    "serverless-plugin-include-dependencies": "^4.1.0"
   }
 }
